good base structure

--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -1,7 +1,20 @@
 ﻿@page "/"
 
-<PageTitle>Home</PageTitle>
+<PageTitle>Rory Quotes</PageTitle>
 
-<h1>Hello, world!</h1>
-
-Welcome to your new app.
+<div class="text-center">
+    <figure>
+        <blockquote class="blockquote">
+            <h1>A well-known quote, contained in a blockquote element.</h1>
+        </blockquote>
+        <h2>
+            <figcaption class="blockquote-footer">
+                Rory
+            </figcaption>
+        </h2>
+        <div class="d-flex justify-content-center">
+            <button class="btn btn-primary btn-lg m-1" type="button">Get Random Quote</button>
+            <button class="btn btn-outline-primary btn-lg m-1" type="button">Hear Rory Say It</button>
+        </div>
+    </figure>
+</div>
